--- a/src/main/resources/static/Parentview.html
+++ b/src/main/resources/static/Parentview.html
@@ -317,9 +317,17 @@
                   <h5 class="card-title" style="color: #4d1354">Student registered Classes</h5>
                   <div class="d-flex align-items-center">
                     <div class="form-floating mb-6" style="width: 75%">
-                      <select onchange="getAttendance()" class="form-select" id="floatingSelectClass" aria-label="State">-->
-                        <option selected>Select Class</option>
-                      </select>
+<!--                      <div class="row">-->
+<!--                        <div class="col-7">-->
+                          <select onchange="getAttendance()" class="form-select" id="floatingSelectClass" aria-label="State">-->
+                            <option selected>Select Class</option>
+                          </select><br>
+<!--                        </div>-->
+<!--                        <div class="col-5">-->
+                          <input id="precentage" type="text" disabled>
+<!--                        </div>-->
+<!--                      </div>-->
+
                       <label for="floatingSelectClass">Class Name</label>
                     </div>
 
