Cross checked of reports

--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -447,7 +447,7 @@
 
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3">
-                                                    <select class="form-select" id="floatingSelectStatus" aria-label="State">
+                                                    <select onchange="selectValidater(floatingSelectStatus,'','stureg','stu_registration_status_id','old_stureg')" class="form-select" id="floatingSelectStatus" aria-label="State">
                                                         <option selected>Select Registration Status</option>
 
                                                     </select>
