--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -512,7 +512,7 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: #4d1354">Teacher table</h5>
                         <!-- Table with stripped rows -->
-                        <table class="table datatable" id="tchr_table">
+                        <table class="table" id="tchr_table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
