Added notifications to attandance

--- a/src/main/resources/static/TeacherRegistration.html
+++ b/src/main/resources/static/TeacherRegistration.html
@@ -410,7 +410,7 @@
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color: #4d1354">Reacher regsitration Form</h1>
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color: #4d1354">Teacher regsitration Form</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -435,7 +435,7 @@
                                                     <label for="teacherName">First Name <span style="color: red">*</span></label>
                                                 </div>
                                             </div>
-                                            <div class="col-md-12">
+                                            <div class="col-md-6">
                                                 <div class="form-floating mb-3">
                                                     <select onchange="selectValidater(floatingSelectClassCode,'','teacherregistration','class_implementation_id','old_teacherregistration');" class="form-select" id="floatingSelectClassCode" aria-label="State">
                                                         <option selected>Select Class Code</option>
