--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -434,11 +434,17 @@
                                             </div>
 
                                             <div class="col-md-6">
-                                                <div class="form-floating">
-                                                    <input onchange=" getClassName();  getStudentListByClassRegistration();" type="text" class="form-control" id="floatingClasscode"
-                                                           placeholder="Class code">
-                                                    <label for="floatingClasscode">Class Code <span style="color: red">*</span></label>
+                                                <div class="col-md-10">
+                                                    <div class="form-floating">
+                                                        <input type="text" class="form-control" id="floatingClasscode"
+                                                               placeholder="Class code">
+                                                        <label for="floatingClasscode">Class Code <span style="color: red">*</span></label>
+                                                    </div>
                                                 </div>
+
+                                                    <div class="col-md-2">
+                                                        <button   class="btn btn-primary" onclick="getClassName();  getStudentListByClassRegistration();" style="background-color: #4d1354; color: white">Check</button>
+                                                    </div>
                                             </div>
 
                                             <div class="col-md-6">
@@ -449,13 +455,6 @@
                                                 </div>
                                             </div>
 
-
-
-                                            <!--                                <div class="col-md-6">-->
-                                            <!--                                    <label>Reg Count : </label><br>-->
-                                            <!--                                    <label>Present Count :</label><br>-->
-                                            <!--                                    <label>Absent Count :</label>-->
-                                            <!--                                </div>-->
                                             <div class="col-md-6">
                                                 <div class="row mt-2">
                                                     <div class="col-6 fw-bold">Total Reg Count :</div>
