--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -274,7 +274,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="/dashboard">
-                <i class="bi bi-grid"></i>
+                <i class="bx bxs-home"></i>
                 <span>Home</span>
             </a>
         </li><!-- End Dashboard Nav -->
@@ -301,7 +301,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#st-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-bar-chart"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
+                <i class="fa-solid fa-graduation-cap"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="st-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
@@ -320,7 +320,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="/attendance">
-                <i class="bi bi-envelope"></i>
+                <i class="bx bx-list-check"></i>
                 <span>Student Attendance</span>
             </a>
         </li><!-- End Contact Page Nav -->
@@ -328,7 +328,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-layout-text-window-reverse"></i><span>Class Implementation</span><i
+                <i class="bx bxs-school"></i><span>Class Implementation</span><i
                     class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
@@ -348,7 +348,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-bar-chart"></i><span>Teacher</span><i class="bi bi-chevron-down ms-auto"></i>
+                <i class="fa-solid fa-chalkboard-user"></i><span>Teacher</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
@@ -546,20 +546,74 @@
                             </thead>
                             <tbody id="tbl_body">
                             </tbody>
-
-                        </table>
-                        <!-- End Table with stripped rows -->
+                        </table><!-- End Table with stripped rows -->
                     </div>
                 </div>
-
             </div>
-        </div>
+
+            <!--model for view with print-->
+            <div class="modal fade" id="attViewModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Attendance Details</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <table id="tablePrintTbl" class="table  table-striped table-hover">
+
+                                <tr>
+                                    <th>Date</th>
+                                    <td id="td_date"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Class Name</th>
+                                    <td id="td_cname"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Class Code</th>
+                                    <td id="td_ccode"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Register Count</th>
+                                    <td id="td_reg"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Present Count</th>
+                                    <td id="td_pre"></td>
+                                </tr>
 
 
-        <!-- End #main -->
-        </div>
+                                <tr>
+                                    <th>Absent Count</th>
+                                    <td id="td_abb"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Class Status</th>
+                                    <td id="td_cSta"></td>
+                                </tr>
+
+                            </table>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button onclick="attPrintModel()" type="button" class="btn btn-primary">Print</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
+            <!-- End #main -->
+            </div>
     </section>
 
 
