--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -433,7 +433,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col-md-6">
+                                            <div class="col-md-4">
                                                 <div class="col-md-10">
                                                     <div class="form-floating">
                                                         <input type="text" class="form-control" id="floatingClasscode"
@@ -441,10 +441,12 @@
                                                         <label for="floatingClasscode">Class Code <span style="color: red">*</span></label>
                                                     </div>
                                                 </div>
+                                            </div>
 
-                                                    <div class="col-md-2">
-                                                        <button   class="btn btn-primary" onclick="getClassName();  getStudentListByClassRegistration();" style="background-color: #4d1354; color: white">Check</button>
-                                                    </div>
+                                            <div class="col-md-2">
+<!--                                                <div class="col-md-2">-->
+                                                    <button   class="btn btn-primary" onclick="getClassName();  getStudentListByClassRegistration();" style="background-color: #4d1354; color: white">Check</button>
+<!--                                                </div>-->
                                             </div>
 
                                             <div class="col-md-6">
@@ -479,7 +481,7 @@
 
                                             <div class="card">
                                                 <div class="card-body">
-                                                    <h5 class="card-title">List of Student</h5>
+                                                    <h5 class="card-title" style="color: #4d1354">List of Student</h5>
                                                     <!-- Smal tables -->
                                                     <table class="table table-sm" id="tblAttendanceMark">
                                                         <thead>
@@ -545,6 +547,7 @@
                             </tr>
                             </thead>
                             <tbody id="tbl_body">
+
                             </tbody>
 
                         </table>
