--- a/src/main/resources/static/Teacherview.html
+++ b/src/main/resources/static/Teacherview.html
@@ -334,6 +334,15 @@
         </div><!-- End Left side columns -->
       </div>
 
+      <div class="row">
+        <div class="col-10"></div>
+        <div class="d-grid gap-2 col-2 mx-auto mb-1">
+          <button type="button" class="btn" onclick="window.href('/attendance')" style="background-color: #4d1354; color: white">
+            Student Attendance
+          </button>
+        </div>
+      </div>
+
       <div class="card">
         <div class="card-body">
           <h5 class="card-title" style="color: #4d1354">Attendance</h5>
