--- a/src/main/resources/static/Teacherview.html
+++ b/src/main/resources/static/Teacherview.html
@@ -337,8 +337,8 @@
       <div class="row">
         <div class="col-10"></div>
         <div class="d-grid gap-2 col-2 mx-auto mb-1">
-          <button type="button" class="btn" onclick="window.href('/attendance')" style="background-color: #4d1354; color: white">
-            Student Attendance
+          <button type="button" class="btn" onclick="window.location.replace('/attendance')" style="background-color: #4d1354; color: white">
+            Mark Student Attendance
           </button>
         </div>
       </div>
