fixed duplication entry

--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -62,7 +62,7 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a href="/dashboard" class="logo d-flex align-items-center">
+        <a href="#" class="logo d-flex align-items-center" onclick="checkLogUser()">
             <img src="assets/img/Child%20Safe.png" alt="">
 
         </a>
@@ -391,7 +391,7 @@
         <h1 style="color: #4d1354">Student Attendance</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="#" onclick="checkLogUser()">Home</a></li>
                 <li class="breadcrumb-item">Student Attendance</li>
             </ol>
         </nav>
