--- a/src/main/resources/static/Login.html
+++ b/src/main/resources/static/Login.html
@@ -112,7 +112,7 @@
                     <button onclick="console.log(username + '-' + password)" class="btn btn-primary w-100" type="submit" style="background-color: #4d1354; border-radius: 50px">Login</button>
                   </div>
                   <div class="col-12">
-                    <p class="small mb-0"><h6>Don't have account? <a href="/createaccount">Create an account</a></h6></p>
+                    <p class="small mb-0"><h6 style="margin-top: 30px">Don't have account? <a href="/createaccount">Create an account</a></h6></p>
                   </div>
                 </form>
 
@@ -146,7 +146,7 @@
   window.addEventListener("load",ex =>{
     let url = window.location.href;
     if (url == "http://localhost:8080/login?error=usernamepassworderror"){
-      $('#errmsg').html('<div>Incorrect username or password</div>');
+      $('#errmsg').html('<div style="margin-top: 20px">Incorrect username or password</div>');
       $('#errmsg').show(); // Show the error message
     }else{
       $('#errmsg').hide(); // Hide the error message
