Pawword edit fixed

--- a/src/main/resources/static/Teacherview.html
+++ b/src/main/resources/static/Teacherview.html
@@ -249,7 +249,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center">
               <i class="bi bi-box-arrow-right"></i>
               <span onclick="logoutMC()">Sign Out</span>
             </a>
@@ -342,7 +342,7 @@
       <div class="row">
         <div class="col-10"></div>
         <div class="d-grid gap-2 col-2 mx-auto mb-1">
-          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#basicModal" style="background-color: #4d1354; color: white">
+          <button id="markAttBt" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#basicModal" style="background-color: #4d1354; color: white;display: none">
             Mark Student Attendance
           </button>
         </div>
