--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -251,7 +251,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
+                        <a class="dropdown-item d-flex align-items-center">
                             <i class="bi bi-box-arrow-right"></i>
                             <span onclick="logoutMC()">Sign Out</span>
                         </a>
