--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -278,26 +278,6 @@
             </a>
         </li><!-- End Dashboard Nav -->
 
-        <!--        <li class="nav-item">-->
-        <!--            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">-->
-        <!--                <i class="bi bi-menu-button-wide"></i><span>Administration</span><i-->
-        <!--                    class="bi bi-chevron-down ms-auto"></i>-->
-        <!--            </a>-->
-        <!--            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">-->
-        <!--                <li>-->
-        <!--                    <a href="user.html">-->
-        <!--                        <i class="bi bi-circle"></i><span>User</span>-->
-        <!--                    </a>-->
-        <!--                </li>-->
-        <!--                <li>-->
-        <!--                    <a href="privilege.html">-->
-        <!--                        <i class="bi bi-circle"></i><span>Privilege</span>-->
-        <!--                    </a>-->
-
-        <!--            </ul>-->
-        <!--        </li>&lt;!&ndash; End Components Nav &ndash;&gt;-->
-
-
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#st-nav" data-bs-toggle="collapse" href="#">
                 <i class="fa-solid fa-graduation-cap"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -503,10 +483,10 @@
                                     </div>
                     </div>
                     <div class="modal-footer">
-                        <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn">Add Parent</button>
-                        <button onclick="buttonUpdateMC()" type="submit" class="btn btn-outline-warning" id="updatebtn">Update Parent</button>
+                        <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Add Parent</button>
+                        <button onclick="buttonUpdateMC()" type="submit" class="btn btn-outline-warning" id="updatebtn" style="border-radius: 50rem !important">Update Parent</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="btnClaerForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important" style="border-radius: 50rem !important">Clear</button>
                     </div>
                 </div>
             </div>
