--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -461,7 +461,7 @@
                         <button type="submit" onclick="buttonAddMc()" id="addbtn" class="btn btn-outline-success" style="border-radius: 50rem !important">Add Registration</button>
                         <button type="button" onclick="buttonUpdateMC()" id="updatebtn" class="btn btn-outline-warning" style="border-radius: 50rem !important">Update Registration</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="btnClearForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
                     </div>
                 </div>
             </div>
