--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -494,7 +494,7 @@
                         <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Add Teacher</button>
                         <button onclick="buttonUpdateMC()" type="submit" class="btn btn-outline-warning" id="updatebtn" style="border-radius: 50rem !important">Update Teacher</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="btnClearForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
                     </div>
                 </div>
             </div>
