--- a/src/main/resources/static/TeacherModel.html
+++ b/src/main/resources/static/TeacherModel.html
@@ -151,7 +151,8 @@
                     </div>
                     <div class="modal-footer">
                         <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Create Acount</button>
-                        <button type="button" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important" data-bs-dismiss="modal" onclick="window.location.replace('/login')">Close</button>
+                        <button onclick="btnClearForm()" type="submit" class="btn btn-outline-danger" id="clrbtn" style="border-radius: 50rem !important">Clear</button>
+                        <button type="button" class="btn btn-outline-primary" id="" style="border-radius: 50rem !important" data-bs-dismiss="modal" onclick="window.location.replace('/login')">Close</button>
                     </div>
                 </div>
             </div>
