--- a/src/main/resources/static/TeacherRegistration.html
+++ b/src/main/resources/static/TeacherRegistration.html
@@ -461,7 +461,7 @@
                         <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn">Add Teacher Registration</button>
                         <button type="submit" onclick="buttonUpdateMC()" class="btn btn-outline-warning" id="updatebtn">Update Teacher Registration</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="btnClearForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
                     </div>
                 </div>
             </div>
@@ -534,7 +534,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button onclick="institutePrintModel()" type="button" class="btn btn-primary">Print</button>
+                        <button onclick="teacherRegPrintModel()" type="button" class="btn btn-primary">Print</button>
                     </div>
                 </div>
             </div>
