--- a/src/main/resources/static/change-profile.html
+++ b/src/main/resources/static/change-profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Users / Profile - NiceAdmin Bootstrap Template</title>
+  <title>ChildSafe</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,12 +39,6 @@
   <link rel="stylesheet" href="assets/Resourse/iziToast-master/dist/css/iziToast.min.css">
   <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
 
-  <!-- =======================================================
-  * Template Name: NiceAdmin - v2.2.2
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -258,9 +252,7 @@
 
   </header><!-- End Header -->
 
-<!--  &lt;!&ndash; ======= Sidebar ======= &ndash;&gt;-->
 
-<!--  </aside>&lt;!&ndash; End Sidebar&ndash;&gt;-->
 
   <main id="main" class="main">
 
@@ -355,10 +347,10 @@
                       <label for="logimage2" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
                       <div class="col-md-8 col-lg-9">
                         <img id="logimage2" src="" alt="Profile">
-                        <div class="pt-2">
-                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                          <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
-                        </div>
+<!--                        <div class="pt-2">-->
+<!--                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>-->
+<!--                          <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>-->
+<!--                        </div>-->
                       </div>
                     </div>
 
@@ -452,16 +444,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-<!--    <div class="copyright">-->
-<!--      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved-->
-<!--    </div>-->
-<!--    <div class="credits">-->
-<!--      &lt;!&ndash; All the links in the footer should remain intact. &ndash;&gt;-->
-<!--      &lt;!&ndash; You can delete the links only if you purchased the pro version. &ndash;&gt;-->
-<!--      &lt;!&ndash; Licensing information: https://bootstrapmade.com/license/ &ndash;&gt;-->
-<!--      &lt;!&ndash; Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ &ndash;&gt;-->
-<!--      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
-<!--    </div>-->
+
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
