--- a/src/main/resources/static/InstituteImplementation.html
+++ b/src/main/resources/static/InstituteImplementation.html
@@ -277,24 +277,6 @@
             </a>
         </li><!-- End Dashboard Nav -->
 
-        <!--        <li class="nav-item">-->
-        <!--            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">-->
-        <!--                <i class="bi bi-menu-button-wide"></i><span>Administration</span><i-->
-        <!--                    class="bi bi-chevron-down ms-auto"></i>-->
-        <!--            </a>-->
-        <!--            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">-->
-        <!--                <li>-->
-        <!--                    <a href="user.html">-->
-        <!--                        <i class="bi bi-circle"></i><span>User</span>-->
-        <!--                    </a>-->
-        <!--                </li>-->
-        <!--                <li>-->
-        <!--                    <a href="privilege.html">-->
-        <!--                        <i class="bi bi-circle"></i><span>Privilege</span>-->
-        <!--                    </a>-->
-
-        <!--            </ul>-->
-        <!--        </li>&lt;!&ndash; End Components Nav &ndash;&gt;-->
 
 
         <li class="nav-item">
@@ -364,12 +346,7 @@
             </a>
         </li><!-- End Profile Page Nav -->
 
-        <!--        <li class="nav-item">-->
-        <!--            <a class="nav-link collapsed" href="pages-login.html">-->
-        <!--                <i class="bi bi-box-arrow-in-right"></i>-->
-        <!--                <span>Logout</span>-->
-        <!--            </a>-->
-        <!--        </li>&lt;!&ndash; End Login Page Nav &ndash;&gt;-->
+
 
 
 
@@ -466,7 +443,7 @@
                         <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Add Institute</button>
                         <button type="submit" onclick="buttonUpdateMC()" class="btn btn-outline-warning" id="updatebtn" style="border-radius: 50rem !important">Update Institute</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="btnClearForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
                     </div>
                 </div>
             </div>
