--- a/src/main/resources/static/Login.html
+++ b/src/main/resources/static/Login.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Login - NiceAdmin Bootstrap Template</title>
+  <title>ChildSafe</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,12 +50,6 @@
   <script src="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/js/all.js"></script>
   <link rel="stylesheet" href="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/css/all.css">
 
-  <!-- =======================================================
-  * Template Name: NiceAdmin - v2.2.2
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body style="background-size: cover; background-position: center; background-image:url(/assets/img/front_image.jpg);">
