--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -430,18 +430,21 @@
                                             </div>
 
                                             <div class="col-md-4">
-                                                <div class="col-md-10">
+<!--                                                <div class="col-md-10">-->
                                                     <div class="form-floating">
                                                         <input type="text" class="form-control" id="floatingClasscode"
                                                                placeholder="Class code">
                                                         <label for="floatingClasscode">Class Code <span style="color: red">*</span></label>
-                                                    </div>
+
+<!--                                                    </div>-->
+
                                                 </div>
+
                                             </div>
 
                                             <div class="col-md-2">
 <!--                                                <div class="col-md-2">-->
-                                                    <button   class="btn btn-primary" onclick="getClassName();  getStudentListByClassRegistration();" style="background-color: #4d1354; color: white">Check</button>
+                                            <button   class="btn btn-primary" onclick="getClassName();  getStudentListByClassRegistration();" style="background-color: #4d1354; color: white">Check</button>
 <!--                                                </div>-->
                                             </div>
 
