--- a/src/main/resources/static/Studentview.html
+++ b/src/main/resources/static/Studentview.html
@@ -315,17 +315,21 @@
                   <div class="d-flex align-items-center">
                     <div class="form-floating mb-6">
                       <div class="row">
-                        <div class="col-7">
+                        <div class="col-12">
                           <select onchange="getAttendance();" class="form-select" id="floatingSelectClass" aria-label="State">-->
                             <option selected>Select Class</option>
                           </select>
                         </div>
-                       <div class="col-5">
-                         <input id="precentage" type="text" disabled>
-                       </div>
-
 
                       </div>
+<br>
+                      <div class="row">
+                        <div class="col-12">
+                          <input id="precentage" type="text" disabled>
+                        </div>
+                      </div>
+
+
 
                     </div>
 <!--                    <button style="margin-left: 10px" class="btn btn-info" onclick="getAttendance();">My Attendance</button>-->
