Added log out notification

--- a/src/main/resources/static/Parentview.html
+++ b/src/main/resources/static/Parentview.html
@@ -37,6 +37,10 @@
   <script src="/assets/js/ParentView.js"></script>
   <link rel="stylesheet" href="assets/fontawesom/css/all.css">
 
+  <!--iziToast-->
+  <link rel="stylesheet" href="assets/Resourse/iziToast-master/dist/css/iziToast.min.css">
+  <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
+
 </head>
 
 <body>
@@ -316,11 +320,8 @@
                           <select onchange="getAttendance()" class="form-select" id="floatingSelectClass" aria-label="State">-->
                             <option selected>Select Class</option>
                           </select><br>
-<!--                        </div>-->
-<!--                        <div class="col-5">-->
-                          <input id="precentage" type="text" disabled>
-<!--                        </div>-->
-<!--                      </div>-->
+                          <input id="precentage" type="text" style="width: -webkit-fill-available;" disabled>
+
 
                       <label for="floatingSelectClass">Class Name</label>
                     </div>
