--- a/src/main/resources/static/Studentview.html
+++ b/src/main/resources/static/Studentview.html
@@ -36,6 +36,10 @@
   <script src="/assets/js/dashboard.js"></script>
   <link rel="stylesheet" href="assets/fontawesom/css/all.css">
 
+  <!--iziToast-->
+  <link rel="stylesheet" href="assets/Resourse/iziToast-master/dist/css/iziToast.min.css">
+  <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
+
 
 </head>
 
@@ -325,7 +329,7 @@
 <br>
                       <div class="row">
                         <div class="col-12">
-                          <input id="precentage" type="text" disabled>
+                          <input id="precentage" type="text" disabled style="width: -webkit-fill-available;">
                         </div>
                       </div>
 
