--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,6 +36,10 @@
   <script src="/assets/js/dashboard.js"></script>
   <link rel="stylesheet" href="assets/fontawesom/css/all.css">
 
+  <!--iziToast-->
+  <link rel="stylesheet" href="assets/Resourse/iziToast-master/dist/css/iziToast.min.css">
+  <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
+
 </head>
 
 <body>
