--- a/src/main/resources/static/ParentModel.html
+++ b/src/main/resources/static/ParentModel.html
@@ -83,6 +83,7 @@
                                                            placeholder="Your NIC">
                                                     <label for="floatingNIC">NIC <span style="color: red">*</span></label>
                                                 </div>
+                                                <label style="font-size: 10px; color: #4d1354">Please use your NIC as your Username</label>
                                             </div>
 
                                             <div class="col-md-6">
