--- a/src/main/resources/static/StudentModel.html
+++ b/src/main/resources/static/StudentModel.html
@@ -102,7 +102,9 @@
                                                     <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]{3,}@[a-z]{3,}.[a-z]{2,3}$','student','email','old_student')" type="email" class="form-control" id="floatingEmail"
                                                            placeholder="Your Email">
                                                     <label for="floatingEmail">Email <span style="color: red">*</span></label>
+
                                                 </div>
+                                                <label style="font-size: 10px; color: #4d1354">Please use your Email address as your Username</label>
                                             </div>
                                             <div class="col-6">
                                                 <div class="form-floating">
