--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -413,6 +413,7 @@
                                                            placeholder="Your Email">
                                                     <label for="floatingEmail">Email  <span style="color: red">*</span></label>
                                                 </div>
+                                                <label style="font-size: 10px; color: #4d1354">Please use your Email address as your Username</label>
                                             </div>
                                             <div class="col-6">
                                                 <div class="form-floating">
